Fix - player sided journal collapse/expand buttons being white icons on white background

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -2923,6 +2923,7 @@ button.roll-button-mod.minus {
     }
     .material-icons{
         padding: 1px 0px 0px 0px;
+        color:#000;
     }
 }
 
